--- a/Awesome_Clock/packages.config
+++ b/Awesome_Clock/packages.config
@@ -9,4 +9,5 @@
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="Unity.Abstractions" version="5.11.1" targetFramework="net461" />
   <package id="Unity.Container" version="5.11.1" targetFramework="net461" />
+  <package id="WpfAnimatedGif" version="1.4.18" targetFramework="net461" />
 </packages>
